# tradingchassis-ops-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: docs-pages.yml
dashboards/grafana/: ops-lab-run-observability.json  tradingchassis-ops-lab-run-observability.json
deploy/observability/: docker-compose.yml
deploy/observability/prometheus/: prometheus.yml
docs/: architecture.md  backtest-vs-paper.md  demo-flow.md  failure-modes.md  future-work.md  index.md  limitations.md  quickstart.md  roadmap.md  run-model.md  scope.md
docs/adr/: 0001-use-nautilus-as-engine.md  0002-local-first-monorepo.md  0003-backtest-and-paper-as-run-modes.md  index.md
docs/javascripts/: disable-nav-drag.js
docs/overrides/: main.html
docs/runbooks/: README.md  artifact-health.md  connectivity-probe-failed.md  evidence-compare.md  index.md  observability-no-data.md  reconciliation-mismatch.md  restart-recovery.md  safety-gate.md  stale-market-data.md
docs/stylesheets/: extra.css
examples/configs/: btcusdt_backtest.yaml  btcusdt_paper.yaml
examples/reconciliation/: README.md  expected_match.json  observed_match.json  observed_missing_freshness_unknown.json  observed_open_orders_mismatch.json  observed_position_mismatch.json  observed_stale_warning.json
fixtures/datasets/btcusdt-sample/: README.md  candles_1m.csv
reports/sample/: README.md
reports/sample/backtest/: journal_excerpt.jsonl  metadata.json  metrics.json  metrics.prom  report.md
reports/sample/paper/: report.md  (+3 more)
scripts/: check.sh
src/ops_lab/: __init__.py  cli.py
src/tradingchassis_ops_lab/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_connectivity_probe.py  test_connectivity_readiness.py  test_data_fingerprint.py  test_data_prepare.py  test_devcontainer_integration.py  test_drills.py  test_evidence_compare.py  test_evidence_write.py  test_kill_switch.py  test_observability_metrics.py  test_observability_serve.py  test_observability_stack_configs.py  test_package_integration.py  test_reconciliation.py  test_runs_artifacts.py  test_runs_hashing.py  test_runs_journal.py  test_runs_metadata.py  test_runs_paper_safety.py  test_runs_spec.py
(+71 files in other folders)
