[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-lab"
version = "0.1.0"
description = "Operations-focused run lab scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer",
  "pydantic",
  "PyYAML",
  "nautilus_trader==1.227.0",
  "pandas==2.3.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
tc = "ops_lab.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
