[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingchassis-ops-lab"
version = "0.5.0"
description = "Operations-focused run lab scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer==0.25.1",
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
  "nautilus_trader==1.227.0",
  "pandas==2.3.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.13",
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.1",
]

[project.scripts]
tc = "tradingchassis_ops_lab.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
